--- a/src/index.html
+++ b/src/index.html
@@ -29,15 +29,15 @@
 				<table class="ui padded table segment">
 					<tbody>
 						<tr>
-							<td>Gross salary</td>
+							<td>Gross salary:</td>
 							<td id="gross-salary"></td>
 						</tr>
-						<tr>
-							<td>Net Salary</td>
+						<tr class="positive">
+							<td>Net Salary:</td>
 							<td id="net-salary"></td>
 						</tr>
 						<tr>
-							<td>Monthly</td>
+							<td>Monthly:</td>
 							<td id="monthly-salary"></td>
 						</tr>
 					</tbody>
