Updating meteor app

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
 </head>
 <body>
-	<div class="ui menu">
+	<div class="ui green segment">
 		<a class="item"><i class="home icon"></i>Home</a>
 		<!-- <a class="item"><i class="mail icon"></i>Inbox</a> -->
 	</div>
