--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <head>
 	<title>Calculate your Salary</title>
 	<link rel="stylesheet" type="text/css" href="/css/calculate.css"/>
+	<script src="/javascript/Chart.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
 </head>
 <body>
